word/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-deploy
  namespace: word
spec:
  replicas: 10
  selector:
    matchLabels:
      app: word-deploy
      version: v1
  template:
    metadata:
      labels:
        app: word-deploy
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
#          requiredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
#            - labelSelector:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - word-deploy
              topologyKey: kubernetes.io/hostname
      containers:
      - image: wordpress:latest
        name: word-deploy
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/www/html/wp-config.php
          name: wp-config-volume
          subPath: wp-config.php
        - mountPath: /var/www/html/wp-content/plugins/classic-editor
          name: plugins-volume
          readOnly: true
      volumes:
      - configMap:
          name: word-config
        name: wp-config-volume
      - emptyDir: {}
        name: plugins-volume
      - name: word-secret-volume
        secret:
          secretName: word-secret
