word/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: word-ingress
  namespace: word
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: word.fo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: word-service
                port:
                  number: 80
